argocd/applications/ociregistry/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: "ociregistry"
  labels:
    app: "ociregistry"

spec:
  replicas: 1
  revisionHistoryLimit: 0

  selector:
    matchLabels:
      app: "ociregistry"

  template:
    metadata:
      labels:
        app: "ociregistry"

    spec:
      containers:
        - name: "ociregistry"
          image: "docker.io/registry:2.8.3"

          ports:
            - name: "app"
              containerPort: 5000

          resources:
            requests:
              cpu: "1m"
              memory: "25Mi"

          volumeMounts:
            - name: "auth"
              mountPath: "/var/lib/htpasswd"
            - name: "data"
              mountPath: "/var/lib/registry"

      volumes:
        - name: "auth"
          persistentVolumeClaim:
            claimName: "auth"

        - name: "data"
          persistentVolumeClaim:
            claimName: "data"
