argocd/applications/ociregistry/routing.yaml
apiVersion: v1
kind: Service
metadata:
  name: "ociregistry"

spec:
  ports:
    - name: "http-traffic"
      port: 80
      targetPort: "app"

  selector:
    app: "ociregistry"

---

apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  annotations:
  name: "ociregistry-web"
  namespace: "ociregistry"

spec:
  entryPoints:
    - web

  routes:
    - match: Host(`registry.tlake.io`)
      kind: Rule
      services:
        - name: "ociregistry"
          port: "http-traffic"

---

apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  annotations:
  name: "ociregistry-websecure"
  namespace: "ociregistry"

spec:
  entryPoints:
    - websecure

  routes:
    - match: Host(`registry.tlake.io`)
      kind: Rule
      services:
        - name: "ociregistry"
          port: "http-traffic"

  tls:
    certResolver: "staging"
